Frontend need to improve

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,18 +22,19 @@
 </head>
 <body>
 	<div class="alert alert-success" role="alert" id='alert-info'>
-		<h1 style="text-align: center;"class>Flask JWT Authentication</h1>
+		<h1 style="text-align: center;" id="info-text">Flask JWT Authentication</h1>
 	  </div>
 	<div class="form-container">
 		<div class="mb-3">
 		  <label for="exampleInputEmail1" class="form-label">Username</label>
-		  <input type="email" class="form-control" id="email" >
+		  <input type="email" class="form-control" id="username" >
 		</div>
 		<div class="mb-3">
 		  <label for="exampleInputPassword1" class="form-label">Password</label>
 		  <input type="password" class="form-control" id="password">
 		</div>
 		<button type="submit" class="btn btn-primary" id="btn-submit">Submit</button>
+		<script src="./script.js"></script>
 	</div>
 </body>
 </html>
